Ensure prev/next links don't wrap on small grid

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -339,6 +339,7 @@ ul.off-canvas-list ul.dropdown {
     width: 45%;
     padding: 10px 20px;
     text-transform: uppercase;
+    white-space: nowrap;
   }
   .previous,
   .st-prev { float:left; }
